--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -16,6 +16,7 @@
 @import "content/total-section";
 @import "content/offet-section";
 @import "content/news-section";
+@import "content/contacts-section";
 @import "content/about-egg";
 @import "content/tabs";
 @import "content/content";
