--- a/app/sass/content/advantages-list.scss
+++ b/app/sass/content/advantages-list.scss
@@ -28,6 +28,10 @@
 		@media (min-width: $desk-w) {
 			display: block;
 			opacity: 0;
+			max-width: 500px;
+		};
+		@media (min-width: 1360px) {
+			max-width: 100%;
 		};
 		img {
 			position: relative;
@@ -86,7 +90,7 @@
 	li {
 		position: relative;
 		transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out;
-		will-change: transform top bottom left right;
+		will-change: transform, top, bottom, left, right;
 		width: 100%;
 		max-width: 230px;
 		margin: 0 auto;
@@ -99,8 +103,55 @@
 			transform: translateY(-50%);
 			z-index: 500;
 		}
+		&:nth-child(1) {
+			.advantage-item__img {
+				img {
+					top: 0;
+				}
+			}
+		}
+		&:nth-child(2) {
+			.advantage-item__img {
+				img {
+					top: -15px;
+				}
+			}
+		}
+		&:nth-child(3) {
+			.advantage-item__img {
+				img {
+					top: 0;
+				}
+			}
+		}
+		&:nth-child(4) {
+			.advantage-item__img {
+				img {
+					top: 5px;
+				}
+			}
+		}
+		&:nth-child(5) {
+			.advantage-item__img {
+				img {
+					top: 30px;
+				}
+			}
+		}
+		&:nth-child(6) {
+			.advantage-item__img {
+				img {
+					top: 40px;
+					left: 30px;
+				}
+			}
+		}
+		@media (min-width: $mob-s) {
+			margin: 0 30px;
+		};
 		@media (min-width: $desk-w) {
 			position: absolute;
+			margin: 0;
 			width: 300px;
 			min-height: 200px;
 			opacity: 0;
@@ -166,7 +217,7 @@
 				}
 				&:nth-child(4) {
 					bottom: 0;
-					transform: translate(-75%, 10%);
+					transform: translate(-75%, -30%);
 				}
 				&:nth-child(5) {
 					left: 0;
@@ -215,7 +266,7 @@
 			color: #faf4ef;
 		}
 		img {
-			position: relative;
+			position: absolute;
 			z-index: 15;
 		}
 	}
