--- a/app/sass/footer/footer.scss
+++ b/app/sass/footer/footer.scss
@@ -1,9 +1,9 @@
 /*______ FOOTER ______*/
 
 .footer {
-	padding-top: 30px;
+	//padding-top: 30px;
 	@media (min-width: $tablet-w) {
-		padding-top: 70px;
+		//padding-top: 70px;
 	};
 	&__column-wrapper {
 		@media (min-width: $mob-xs) {
@@ -80,53 +80,6 @@
 				color: $tColor;
 			}
 		}
-	}
-}
-
-.contacts {
-	&__tel {
-		margin-bottom: 14px;
-		display: inline-block;
-		font-size: 24px;
-		color: $btColor;
-		font-family: $secondFont;
-	}
-}
-
-.subtitle {
-	margin-bottom: 10px;
-	font-size: 16px;
-	line-height: 22px;
-	color: #5b6356;
-}
-
-.green-link {
-	color: $green;
-}
-
-.copyright {
-	margin-bottom: 10px;
-	line-height: 24px;
-}
-
-.politics {
-	color: $tColor;
-}
-
-.dev-ae {
-	position: relative;
-	margin-top: 10px;
-	padding-left: 30px;
-	display: inline-block;
-	line-height: 24px;
-	color: $tColor;
-	@media (min-width: $mob-s) {
-		margin-top: 0;
-	};
-	svg {
-		position: absolute;
-		top: 0;
-		left: 0;
 	}
 }
 
