--- a/app/sass/forms/forms.scss
+++ b/app/sass/forms/forms.scss
@@ -1,2 +1,155 @@
+
 /*______ FORMS ______*/
+
+.contacts-form-wrapper {
+	&>img {
+		position: absolute;
+		z-index: 30;
+		&.ellipse-abs-1 {
+			top: 80px;
+			right: -90px;
+		}
+		&.ellipse-abs-2 {
+			top: 90px;
+			right: -95px;
+		}
+	}
+}
+
+.custom-form {
+	position: relative;
+	z-index: 50;
+	input[type="text"],
+	input[type="email"],
+	input[type="phone"],
+	textarea {
+		padding: 18px 20px;
+		background: $bgColor;
+		border: none;
+		width: 100%;
+		font-size: 16px;
+		line-height: 24px;
+		border-radius: 6px;
+	}
+	fieldset {
+		margin: 0;
+		padding: 0;
+		border: none;
+		margin-bottom: 15px;
+	}
+	textarea {
+		min-height: 115px;
+		resize: vertical;
+	}
+	.btn {
+		width: 100%;
+		max-width: 100%;
+		cursor: pointer;
+		@media (min-width: $tablet-w) {
+			max-width: 100%;
+		};
+
+	}
+}
+
+::placeholder {
+	color: $tColor;
+}
+
+.custom-form-element-wrapper {
+	position: relative;
+	cursor: pointer;
+	input {
+		position: absolute;
+		width: 1px;
+		height: 1px;
+		opacity: 0;
+		visibility: hidden;
+	}
+	input[type="checkbox"] {
+		&:checked {
+			&~ .custom-checkbox {
+				&:after {
+					transform: scale(1);
+				}
+			}
+		}
+	}
+}
+
+.custom-checkbox {
+	position: relative;
+	margin-right: 8px;
+	display: block;
+	width: 24px;
+	height: 24px;
+	border-radius: 6px;
+	background: $bgColor;
+	cursor: pointer;
+	&:after {
+		content: '';
+		position: absolute;
+		top: 1px;
+		left: 7px;
+		display: block;
+		width: 23px;
+		height: 16px;
+		background: url('../img/ui/checkbox.svg') center no-repeat;
+		background-size: 100%;
+		transform: scale(0);
+		transform-origin: 25% 100%;
+		transition: transform .2s linear;
+	}
+}
+
+.custom-file {
+	position: relative;
+	margin-right: 8px;
+	display: block;
+	width: 24px;
+	height: 24px;
+	cursor: pointer;
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: block;
+		width: 100%;
+		height: 100%;
+		background: url('../img/ui/plus.svg') center no-repeat;
+		background-size: 24px;
+		transition: transform .2s linear;
+		cursor: pointer;
+	}
+}
+
+.custom-label {
+	 font-size: 16px;
+	 line-height: 24px;
+	 &--green {
+	 	color: $green;
+	 }
+}
+
+.form-title {
+	margin-bottom: 22px;
+	font-size: 24px;
+	line-height: 30px;
+}
+
+.file-name {
+	width: 100%;
+	@media (min-width: $mob-s) {
+		text-align: right;
+	}
+}
+
+.contacts-form {
+	@media (min-width: $tablet-w) {
+		margin-left: auto;
+		max-width: 440px;
+	};
+}
+
 /*______ END FORMS ______*/
