--- a/app/templates/company.twig
+++ b/app/templates/company.twig
@@ -370,8 +370,8 @@
 	<section class="news-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Новости компании «Лето-Групп»</h2>
-			<ul class="news-list" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
-				<li class="item">
+			<ul class="news-list uk-grid uk-child-width-1-3@m uk-child-width-1-2@s" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+				<li class="news-item">
 					<article>
 						<header>
 							<figure>
@@ -391,7 +391,7 @@
 						</section>
 					</article>
 				</li>
-				<li class="item">
+				<li class="news-item">
 					<article>
 						<header>
 							<figure>
@@ -411,7 +411,7 @@
 						</section>
 					</article>
 				</li>
-				<li class="item">
+				<li class="news-item">
 					<article>
 						<header>
 							<figure>
