--- a/app/templates/includes/scripts.twig
+++ b/app/templates/includes/scripts.twig
@@ -6,4 +6,5 @@
 <script src="libs/ofi.min.js" defer></script>
 <script src="libs/countUp/countUp.min.js" defer></script>
 <script src="js/sliders.js" defer></script>
+<script src="js/flybox.js" defer></script>
 <script src="js/main.js" defer></script>
